# NexusGrad

./: .gitmodules  README.md  graph_dump.safetensors
arch/: CMakeLists.txt
arch/include/: cgad.hpp
arch/include/func/: autodiff_ops.hpp  newops.def  nodeops.hpp  ops.hpp  schema.hpp
arch/include/kern/: kernels.hpp
arch/include/layer/: activation.hpp  affine.hpp  archlist.hpp  attention.hpp  embed.hpp  loss.hpp  norm.hpp  opinse.hpp  optim.hpp  tokeni.hpp
arch/include/ops/: optim.hpp
arch/include/opt/: opinse.hpp  optim.hpp
arch/include/tokenize/: embed.hpp  tokeni.hpp  tokenus.hpp
arch/src/autodiff/: autodiff_jvp_ops.cpp  autodiff_vjp_ops.cpp  nodeops.cpp
arch/src/func/: autodiff_jvp_ops.cpp  autodiff_nodeops.cpp  autodiff_vjp_ops.cpp  nodeops.cpp  ops.cpp  schema.cpp
arch/src/kern/: kernels.cpp
arch/src/kernels/: kernels.cpp
arch/src/layer/: Untitled0.ipynb  activation.cpp  affine.cpp  attention.cpp  embed.cpp  loss.cpp  norm.cpp  opinse.cpp  tokeni.cpp  tokenus.cpp
arch/src/ops/: optim.cpp
arch/src/opt/: optim.cpp
arch/src/tokenize/: corpus.txt  embed.cpp
arch/tests/: test_aliba.cpp  test_aligen.cpp  test_alimass.cpp  test_aliop.cpp  test_eh.cpp  test_keret.cpp  test_keretu.cpp  test_layer.cpp  test_neh.cpp  test_opin.cpp  test_tok.cpp
arch/tests/testarchive/: test_layalib.cpp  test_newlay.cpp  test_opin.cpp
binder_out/: cgadimpl.cpp  cgadimpl.sources
binder_out/docstrings/: autodiff_docs.hpp  autodiff_ops_docs.hpp  checkpoint_docs.hpp  debug_docs.hpp  export_hlo_docs.hpp  graph_docs.hpp  json_docs.hpp  kernels_api_docs.hpp  nn_docs.hpp  nodeops_docs.hpp  optim_docs.hpp  tensor_docs.hpp
cgadimpl/: CMakeLists.txt  README.md
cgadimpl/binder_out/docstrings/: autodiff_docs.hpp  autodiff_ops_docs.hpp  careful_deletion_docs.hpp  cuda_graphs_docs.hpp  inplace_docs.hpp  kernels_api_docs.hpp  ops_docs.hpp  runtime_docs.hpp  schema_docs.hpp  tensor_docs.hpp
cgadimpl/include/: optim.hpp  tensor.hpp
cgadimpl/include/ad/: ag_all.hpp  autodiff.hpp  cudaops.hpp  graph.hpp  kernels_api.hpp  nodeops.hpp  ops.hpp  safeten.hpp  supplier.hpp
cgadimpl/include/ad/detail/: autodiff_ops.hpp  newops.def  ops.def
cgadimpl/include/layer/: activation.hpp  affine.hpp  attention.hpp  embed.hpp  loss.hpp  norm.hpp  optim.hpp  structure.hpp  tokeni.hpp  tokenus.hpp
cgadimpl/include/layer/tokenize/: Cargo.toml  exptok.hpp  tokenus.cpp
cgadimpl/include/layer/tokenize/src/: lib.rs
cgadimpl/include/nn/: nn.hpp
cgadimpl/src/autodiff/: autodiff_jvp_ops.cpp  autodiff_nodeops.cpp  autodiff_vjp_ops.cpp  autodiff_vjph_ops.cpp
cgadimpl/src/core/: autodiff.cpp  cudaops.cpp  graph.cpp  kernels_loader.cpp  nodeops.cpp  ops.cpp  supplier.cpp
cgadimpl/src/kernel_stuff/: kernels_loader.cpp
cgadimpl/src/layer/: Untitled0.ipynb  activation.cpp  affine.cpp  attention.cpp  embed.cpp  loss.cpp  norm.cpp  tokeni.cpp  tokenus.cpp
cgadimpl/src/nn/: nn.cpp
cgadimpl/src/optimizer/: optim.cpp
cgadimpl/src/tensor/: tensor.cpp
cgadimpl/src/tools/: binder.cpp  cgad.py  debug.cpp  export_hlo.cpp  graphir.py  mlir.cpp
cgadimpl/src/tools/tests/: test_alicat.cpp  test_alinef.cpp  test_alinfe.cpp  test_ann.cpp  test_crosat.cpp  test_forgpu.cpp  test_layalib.cpp  test_singat.cpp  test_uniali.cpp
cgadimpl/tests/: graph_dump.safetensors  model.hlo  test_ag.cpp  test_aliba.cpp  test_alibat.cpp  test_alicat.cpp  test_alifer.cpp  test_aligen.cpp  test_aline.cpp  test_aliop.cpp  test_ann.cpp  test_cann.cpp  test_core_ops_gpu.cpp  test_crosat.cpp  test_eh.cpp  test_emb.cpp  test_end_to_end_gpu.cpp  test_floal.cpp  test_forbac.cpp  test_graph_compile.cpp  test_ine.cpp  test_integpu.cpp  test_keretu.cpp  test_kernels_gpu.cpp  test_layalib.cpp  test_layer.cpp  test_mlirte.cpp  test_mlp.cpp  test_neh.cpp  test_newcompile.cpp  test_newlay.cpp  test_nodeops.cpp  test_realann.cpp  test_singat.cpp  test_tenat.cpp  test_trainag.cpp  test_wann.cpp  tiny_handcalc.cpp
kernels/: CMakeLists.txt
kernels/cpu/: CMakeLists.txt
kernels/cpu/benchmark/: test_kernels.cpp
kernels/cpu/src/: agkernels_cpu.cpp  bigker.cu  flowkernels_cpu.cpp  matker.cu  matker.cuh  vjpker.cu
kernels/gpu/: CMakeLists.txt  eltwise.cu  entry.cu  expo.cpp  mm_cublas.cu  sto.def  vjp.cu  zero.cu
myenv/: pyvenv.cfg
pybind1/: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CONTENTS.md  QUICK_REFERENCE.md  README.md  requirements.txt  setup.py
pybind1/bindings/: autodiff_bindings.cpp  layer_bindings.cpp  optim_bindings.cpp  tensor_bindings.cpp
pybind1/cgad_bindings/: CMakeLists.txt  README.md  setup.py
pybind1/cgad_bindings/bindings/: autodiff_bindings.cpp  layer_bindings.cpp  optim_bindings.cpp  tensor_bindings.cpp
pybind1/cgad_bindings/src/: cgad_pybind.cpp
pybind1/cgad_bindings/tests/: CMakeLists.txt  test_bindings.py
pybind1/tests/: CMakeLists.txt  example_training.py  test_bindings.py
ztools/: run.sh
